# FastApi_AI_Generating

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  redis.conf  setupcfg
client/: package-lock.json  package.json
cmd/app/: main.py
docker/: .env.example  Dockerfile.backend  Dockerfile.migration  docker-compose.yml  rabbitmq-docker-compose.yml
migrations/: env.py
other/: config.py  generate_image.py  main.py  run.py  send_mail.py
server/: .dockerignore  Makefile  README.md  alembic.ini  package-lock.json  pyproject.toml  requirements.txt
server/docker/: Dockerfile.redis  docker-compose.yaml  docker-compose.yml
server/internal/api/: router.py
server/internal/api/endpoints/: __init__.py  ai_generate.py  applications.py  auth.py  health.py  user.py
server/internal/app/: admin.py  app.py  main.py  users.py
server/internal/config/: base_conf.py  database.py  settings.py
server/internal/controller/amqp/: router.py
server/internal/controller/amqp/v1/: __init__.py  applications.py
server/internal/db/: database.py  models.py  settings.py
server/internal/dto/: application.py  post.py
server/internal/models/: application.py  user.py
server/internal/service/: application.py  auth.py  user.py
server/internal/usecase/utils/: __init__.py  auth.py  mocks.py  response.py  responses.py
server/migrations/: env.py
server/pkg/rabbitmq/rpc/: client.py  routing.py  server.py
server/tests/unit/: test_container.py
tests/: conftest.py
web/: package-lock.json  package.json
(+59 files in other folders)
