[tool.poetry]
name = "AI Generate"
version = "0.2"
description = "FastAPI AI Generating"

license = "MIT"

authors = ["Maxim Bigin <i@flaiers.me>"]

readme = "README.md"
repository = "https://github.com/DamnGachi/FastApi_AI_Generating"


[tool.poetry.dependencies]
python = "^3.10"

uvicorn = "^0.18.3"
gunicorn = "^20.1.0"

Flask = "^2.2.2"
Flask-Admin = "^1.6.0"
fastapi = "^0.79.1"
fastapi-pagination = "^0.9.3"

pydantic = {extras = ["email", "dotenv"], version = "^1.10.2"}

alembic = "^1.8.1"
SQLAlchemy = "^2.0.6"
asyncpg = "^0.26.0"
aio-pika = "^8.2.0"
psycopg2-binary = "^2.9.3"
openai = "^0.27.2"
fastapi-cache2 = "^0.2.1"
python-multipart = "^0.0.6"
aioredis = "^2.0.1"
celery = "^5.2.7"
redis = "^4.5.1"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^10.4.1"}
install = "^1.3.5"
fastapi-users-db-sqlalchemy = "^5.0.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

wemake-python-styleguide = "^0.16.1"
mypy = "^0.971"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
